# HD44780-library

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  build_and_deploy.py  lcd.c  lcd.h
.github/workflows/: ci.yml  release.yml
cmake/: hd44780.pc.in
demo/: CMakeLists.txt  lcd_demo_mock.c  lcd_demo_mock_effects.c  lcd_demo_mock_format.c  lcd_demo_xilinx.c
examples/: demo.c
hal/: CMakeLists.txt  lcd_hal_mock.c  lcd_hal_sim.c  lcd_hal_stub.c  lcd_hal_xilinx_gpio.c
hal_backends/: lcd_hal_mock.c  lcd_hal_xilinx_gpio.c
include/: lcd.h  lcd_config.h  lcd_features.h  lcd_gpio_hal.h  lcd_hal.h  lcd_hal_sim.h  lcd_hal_xilinx_gpio.h  lcd_sim.h  lcd_snapshot.h  xgpio.h  xparameters.h
src/: CMakeLists.txt  lcd.c  lcd_backend.c  lcd_features.c  lcd_gpio_hal.c  lcd_hal.c  lcd_hal_sim.c  lcd_sim.c  lcd_utils_safe.c
tests/: CMakeLists.txt  lcd_sim_test.c  lcd_test.c
